fixed z-index for dropmenu

--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ a {
 }
 
 .col-md-4 {
-    width: 33.3%;
+    width: 33.33333%;
 }
 
 .col-md-6 {
@@ -67,7 +67,7 @@ a {
 }
 
 .col-md-8 {
-    width: 66.6%;
+    width: 66.66667%;
 }
 
 .col-md-9 {
@@ -184,6 +184,7 @@ a {
     padding-top: 20px;
     padding-bottom: 20px;
     background-color: #2c71b8;
+    z-index: 100;
 }
 
 .submenu a {
